--- a/restaurant/templates/landingpage.html
+++ b/restaurant/templates/landingpage.html
@@ -551,11 +551,11 @@
                         <div class="card text-center team-box">
                             <div class="card-body">
                                 <div>
-                                    <img src="{% static 'img/Lionel-Messi-Profile.png' %}" alt="" class="rounded">
+                                    <img src="{% static 'img/Lionel-Messi-Profile.png' %}" height="215" alt="" class="rounded">
                                 </div>
 
                                 <div class="mt-3">
-                                    <h5>Mark Hurley</h5>
+                                    <h5>Lionel Messi</h5>
                                     <P class="text-muted mb-0">CEO & Lead</P>
                                 </div>
                             </div>
@@ -737,7 +737,7 @@
                 <div class="col-xl-4 col-sm-6">
                     <div class="blog-box mb-4 mb-xl-0">
                         <div class="position-relative">
-                            <img src="{% static 'img/foodies.jpg' %}" alt="" class="rounded img-fluid mx-auto d-block">
+                            <img src="{% static 'img/foodies.jpg' %}" width="355" height="280" alt="" class="rounded mx-auto d-block">
                             <div class="badge badge-success blog-badge font-size-11">Sales</div>
                         </div>
 
