--- a/restaurant/templates/users/login.html
+++ b/restaurant/templates/users/login.html
@@ -6,133 +6,71 @@
 
 {% endblock%}
 
-{% block container %}
 
-
-<!-- 
-    <form method="POST" action="{% url 'users:login' %}">
+{% block Title_of_block %}
+    <h5 class="text-pot">Welcome Back !</h5>
+    <br>
+    <p>Sign in to continue to your restaurant account.</p>
+{% endblock %}
+   
+{% block form %}
+    <form class="form-group" action="{% url 'home' %}" method="POST">
         {% csrf_token %}
-
-        <div class="form-group">
-            <input class="form-control" type="text" placeholder="Username" name="username" />
-        </div>
-
-        <div class="form-group">
-            <input class="form-control" type="password" placeholder="Password" name="password" />
-        </div>
-
-
-        <button class="btn btn-primary btn-block mt-5" type="submit">Sign in!</button>
-
-    </form> -->
-
-
-
-    <!-- <p class="mt-4">Don't have an account yet? <a href="{% url 'users:signup' %}">Sign up here.</a></p> -->
-
-
-    <div class="account-pages my-5 pt-sm-5">
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-md-8 col-lg-6 col-xl-5">
-                    <div class="card overflow-hidden">
-                        <div class="poteiros">
-                            <div class="row">
-                                <div class="col-7">
-                                    <div class="text-pot p-4">
-                                        <h5 class="text-pot">Welcome Back !</h5>
-                                        <p>Sign in to continue to your restaurant account.</p>
-                                    </div>
-                                </div>
-                                <div class="col-5 align-self-end">
-                                    <img src="{% static 'img/logo_laspoteiros.jpeg' %}" alt="" class="img-fluid">
-                                </div>
-                            </div>
-                        </div>
-                        <div class="card-body pt-0"> 
-                            <!-- <div>
-                                <a href="index.html">
-                                    <div class="avatar-md profile-user-wid mb-4">
-                                        <span class="avatar-title rounded-circle bg-light">
-                                            <img src="{% static 'img/logo_laspoteiros.jpeg' %}" alt="" class="rounded-circle" height="34">
-                                        </span>
-                                    </div>
-                                </a>
-                            </div> -->
-                            <div class="p-2">
-                                <form class="form-group" action="{% url 'home' %}" method="POST">
-                                    {% csrf_token %}
-                                    {% if form.errors %}
-                                    <p class="alert alert-danger">
-                                        Your username and password didn't match. Please try again.
-                                    </p>
-                                    {% endif%}
-                                   
+        
+        {% if form.errors %}
+            <p class="alert alert-danger">
+                Your username and password didn't match. Please try again.
+            </p>
+        {% endif%}
     
-                                    <div class="form-group">
-                                        <label for="username">Username</label>
-                                        <input type="text" class="form-control" id="username" placeholder="Enter username">
-                                    </div>
-            
-                                    <div class="form-group">
-                                        <label for="userpassword">Password</label>
-                                        <input type="password" class="form-control" id="userpassword" placeholder="Enter password">
-                                    </div>
-            
-                                    <div class="custom-control custom-checkbox">
-                                        <input type="checkbox" class="custom-control-input" id="customControlInline">
-                                        <label class="custom-control-label" for="customControlInline">Remember me</label>
-                                    </div>
-                                    
-                                    <div class="mt-3">
-                                        <button class="btn btn-primary btn-block waves-effect waves-light" type="submit">Log In</button>
-                                    </div>
-        
-                                   
+        <div class="form-group">
+            <label for="username">Username</label>
+            <input type="text" class="form-control" id="username"placeholder="Enter username">
+        </div>
 
-                                    <div class="mt-4 text-center">
-                                        <h5 class="font-size-14 mb-3">Sign in with</h5>
-        
-                                        <ul class="list-inline">
-                                            <li class="list-inline-item">
-                                                <a href="javascript::void()" class="social-list-item bg-primary text-white border-primary">
-                                                    <i class="mdi mdi-facebook"></i>
-                                                </a>
-                                            </li>
-                                            <li class="list-inline-item">
-                                                <a href="javascript::void()" class="social-list-item bg-info text-white border-info">
-                                                    <i class="mdi mdi-twitter"></i>
-                                                </a>
-                                            </li>
-                                            <li class="list-inline-item">
-                                                <a href="javascript::void()" class="social-list-item bg-danger text-white border-danger">
-                                                    <i class="mdi mdi-google"></i>
-                                                </a>
-                                            </li>
-                                        </ul>
-                                    </div>
+        <div class="form-group">
+            <label for="userpassword">Password</label>
+            <input type="password" class="form-control" id="userpassword"placeholder="Enter password">
+        </div>
 
-                                    <div class="mt-4 text-center">
-                                        <a href="{% url 'users:password_recovery' %}" class="text-muted"><i class="mdi mdi-lock mr-1"></i> Forgot your password?</a>
-                                    </div>
-                                </form>
-                            </div>
+        <div class="custom-control custom-checkbox pb-2">
+            <input type="checkbox" class="custom-control-input"id="customControlInline">
+            <label class="custom-control-label"for="customControlInline">Remember me</label>
+        </div>
         
-                        </div>
-                    </div>
-                    <div class="mt-5 text-center">
-                        
-                        <div>
-                            <p>Don't have an account ? <a href="{% url 'users:signup' %}" class="font-weight-medium text-primary"> Signup now </a> </p>
-                            <p>© 2020 Skote. Crafted with <i class="mdi mdi-heart text-danger"></i> by Pablo Calderón</p>
-                        </div>
-                    </div>
+        <div class="mt-3">
+            <button class="btn btn-primary btn-block waves-effectwaves-light" type="submit">Log In</button>
+        </div>
+    </form>
 
-                </div>
-            </div>
+
+    <div class="mt-4 text-center">
+        <h5 class="font-size-14 mb-3">Sign in with</h5>
+
+        <ul class="list-inline">
+            <li class="list-inline-item">
+                <a href="javascript::void()" class="social-list-item bg-primary text-white border-primary">
+                    <i class="mdi mdi-facebook"></i>
+                </a>
+            </li>
+            <li class="list-inline-item">
+                <a href="javascript::void()" class="social-list-item bg-info text-white border-info">
+                    <i class="mdi mdi-twitter"></i>
+                </a>
+            </li>
+            <li class="list-inline-item">
+                <a href="javascript::void()" class="social-list-item bg-danger text-white border-danger">
+                    <i class="mdi mdi-google"></i>
+                </a>
+            </li>
+        </ul>
+    </div>
+    
+    <div class="mt-5 text-center">
+        <div>
+            <p>Don't have an account ? <a href="{% url 'users:signup' %}"class="font-weight-medium text-primary"> Signup now </a> </p>
+            <p>© 2020 Skote. Crafted with <i class="mdi mdi-hearttext-danger"></i> by Pablo Calderón</p>
         </div>
     </div>
-
-
 
 {% endblock %}
