--- a/restaurant/templates/users/signup.html
+++ b/restaurant/templates/users/signup.html
@@ -1,70 +1,30 @@
 {% extends 'users/base.html'%}
 {% load static %}
 
-
 {% block head_content %}
-<title>Restaurant Software Sign Up</title>
+    <title>Restaurant Software Sign Up</title>
 {% endblock %}
 
-{% block container %}
 
+{% block Title_of_block %}
+    <h5 class="text-pot"> Sign up!</h5>
+    <br>
+    <p>Join the community and take control of your restaurant!</p>
+{% endblock %}
 
-<div class="account-pages my-5 pt-sm-5">
-    <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-md-8 col-lg-6 col-xl-5">
-                <div class="card overflow-hidden">
-                    <div class="bg-soft-primary">
-                        <div class="row">
-                            <div class="col-7">
-                                <div class="text-primary p-4">
-                                    <h5 class="text-primary"> Sign up!</h5>
-                                    <p></p>
-                                </div>
-                            </div>
-                            <div class="col-5 align-self-end">
-                                <img src="{% static 'img/logo_laspoteiros.jpeg' %}" alt="" class="img-fluid">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card-body pt-0"> 
-                        <!-- <div>
-                            <a href="{% url 'home' %}">
-                                <div class="avatar-md profile-user-wid mb-4">
-                                    <span class="avatar-title rounded-circle bg-light">
-                                        <img src="{% static 'img/logo_laspoteiros.jpeg' %}" alt="" class="rounded-circle" height="34">
-                                    </span>
-                                </div>
-                            </a>
-                        </div> -->
-                        
-                        <div class="p-2">
-                            <div class="alert alert-success text-center mb-4" role="alert">
-                                Enter your information to create your account
-                            </div>
-                            <form class="form-horizontal" action="{% url 'users:signup' %}" method="POST">
-                                {% csrf_token %}
-                        
-                                {{ form.as_p }}
-                        
-                                <button class="btn btn-primary btn-block mt-5" type="submit">Register!</button>
-                            </form>
-                        </div>
     
-                    </div>
-                </div>
-            </div>
+{% block form %}
+    {% if forms.errors %}
+        <div class="alert alert-danger text-center mb-4" role="alert">
+            {{error}}
         </div>
-    </div>
-</div>
-
-    <!-- <form action="{% url 'users:signup' %}" method="POST">
+    {% endif %}
+    <form class="form-horizontal" action="{% url 'users:signup' %}" method="POST">
         {% csrf_token %}
-
         {{ form.as_p }}
-
         <button class="btn btn-primary btn-block mt-5" type="submit">Register!</button>
-
-    </form> -->
-
+    </form>
 {% endblock %}
+                        
+
+
