--- a/restaurant/templates/home.html
+++ b/restaurant/templates/home.html
@@ -798,7 +798,7 @@
                                                     <div class="row">
                                                         <div class="col-6">
                                                             <h5 class="font-size-15">125</h5>
-                                                            <p class="text-muted mb-0">Projects</p>
+                                                            <p class="text-muted mb-0">Orders</p>
                                                         </div>
                                                         <div class="col-6">
                                                             <h5 class="font-size-15">$1245</h5>
@@ -897,7 +897,7 @@
 
                                 <div class="card">
                                     <div class="card-body">
-                                        <h4 class="card-title mb-4 float-sm-left">Email Sent</h4>
+                                        <h4 class="card-title mb-4 float-sm-left">Incomes, Outcomes and Revenue in time</h4>
                                         <div class="float-sm-right">
                                             <ul class="nav nav-pills">
                                                 <li class="nav-item">
