--- a/restaurant/templates/ingredients/stockcreate.html
+++ b/restaurant/templates/ingredients/stockcreate.html
@@ -19,47 +19,71 @@
                     <p><strong>Create your ingredients!</strong> </p>
 
                 </div>
-                
+                {# Ingredient field #}
                 <div class="form-group">
-                    <label>Choose your ingredient:</label>
+                    <label>Ingredient:</label>
                     <input
                         class="form-control {% if form.ingredient.errors %}is-invalid{% endif %}"
                         type="text"
                         name="ingredient"
-                        placeholder="Ingredient"
+                        placeholder="Ingredient name"
                         value = "{% if form.errors %}{{form.ingredient.value}}{% endif %}"
                     >
                     <div class="invalid-feedback">
-                        {% for error in form.title.errors %}{{ error }}{% endfor %}
+                        {% for error in form.ingredient.errors %}{{ error }}{% endfor %}
                     </div>
                 </div>
+                {# IngredientUnit field #}
+                <div class="form-group">
+                    <label>Ingredient's Units of measure:</label>
+                    <br>
+                    <select class="form-select form-select-sm" aria-label=".form-select-sm example">
+                        <!-- <option selected>Ingredient's unit of measure</option> -->
+                        {% for option in ingredientunit %}
+                        <option>{{option.ingredient.units.name}}</option>
+                        {% endfor %}
+                      
+                      </select>
+                    
+                    <!-- <input
+                        class="form-control {% if form.units.errors %}is-invalid{% endif %}"
+                        type="text"
+                        name="units"
+                        placeholder="Ingredient's Unit of measure"
+                        value = "{% if form.errors %}{{form.units.value}}{% endif %}"
+                    >
+                    <div class="invalid-feedback">
+                        {% for error in form.units.errors %}{{ error }}{% endfor %}
+                    </div> -->
+                </div>
             
-                {# Photo field #}
+                {# Stock field #}
                 <div class="form-group">
                     <label>Quantity to enter:</label>
                     <input
-                        class="form-control {% if form.units.errors %}is-invalid{% endif %}"
+                        class="form-control {% if form.quantity.errors %}is-invalid{% endif %}"
                         type="text"
                         name="quantity"
                         placeholder="quantity"
                         required
                     >
                     <div class="invalid-feedback">
-                        {% for error in form.photo.errors %}{{ error }}{% endfor %}
+                        {% for error in form.quantity.errors %}{{ error }}{% endfor %}
                     </div>
                 </div>
-            
+                
+                {# Stock field #}
                 <div class="form-group">
                     <label>Cost of the ingredient quantity:</label>
                     <input
-                        class="form-control {% if form.units.errors %}is-invalid{% endif %}"
+                        class="form-control {% if form.price_total.errors %}is-invalid{% endif %}"
                         type="text"
                         name="price_total"
                         placeholder="Total amount paid per ingredient"
                         required
                     >
                     <div class="invalid-feedback">
-                        {% for error in form.photo.errors %}{{ error }}{% endfor %}
+                        {% for error in form.price_total.errors %}{{ error }}{% endfor %}
                     </div>
                 </div>
 
