--- a/restaurant/templates/sales.html
+++ b/restaurant/templates/sales.html
@@ -149,8 +149,8 @@
             </div>
         </div> -->
 
-        <div class="row">
-            <div class="table-responsive col-12 offset-1">
+        <div class="col-9">
+            <div class="table-responsive col-11 offset-0px">
                                 
                 <table  id="example" class="table table-striped text-center">
                             
